[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tower-http = { version = "0.5.2", features = ["full"] }
