[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tower-http = { version = "0.5.2", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.24.0"
dotenvy = "0.15.7"
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
futures = "0.3.30"
